--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Scene/Game.Game
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Scene/Game.Game
 GlobalDefaultGameMode=/Game/Prefabs/Pre_GameModeBase.Pre_GameModeBase_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
